# vfstool

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  main.rs
.cargo/: config.toml
.github/workflows/: release.yaml
dw_vfs_lib/: Cargo.toml  README.md
dw_vfs_lib/src/: directory_node.rs  lib.rs  vfs.rs  vfs_file.rs
src/: directory_node.rs  display_tree.rs  lib.rs  main.rs  vfs.rs  vfs_file.rs
vfstool_lib/: Cargo.toml
vfstool_lib/src/: directory_node.rs  lib.rs  vfs.rs  vfs_file.rs
