[package]
name = "vfstool"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for constructing, manipulating, and introspecting virtual file systems in Rust, based on OpenMW's VFS implementation."
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/magicaldave/vfstool"
repository = "https://github.com/magicaldave/vfstool"
keywords = ["vfs", "openmw", "gamedev", "modding", "bethesda", ]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dw-openmw-cfg = { version = "0.5.3" }
vfstool_lib = { path = "vfstool_lib", version = "0.1.0", features = ["serialize"] }
rayon = "1.10.0"

# [dependencies.openmw-cfg]
# git = "https://gitlab.com/magicaldave1/openmw-cfg"
# rev = "e0128a73360fdf226b4038c27c4e0c95e9735f2e"
