[package]
name = "vfstool"
version = "0.2.5"
edition = "2024"
description = "A command-line tool for constructing, manipulating, and introspecting virtual file systems in Rust, based on OpenMW's VFS implementation."
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/DreamWeave-MP/vfstool"
repository = "https://github.com/DreamWeave-MP/vfstool"
keywords = ["vfs", "openmw", "gamedev", "modding", "bethesda"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
vfstool_lib = { path = "vfstool_lib", version = "0.2.0", features = [
    "serialize",
    "bsa",
] }
rayon = "1.10.0"
regex = "1.11.3"

[dependencies.openmw-config]
version = "0.1.92"
