[package]
name = "dw_vfs_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ba2 = "3.0.1"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"], optional  = true }
serde_json = { version = "1.0.140", optional = true }
serde_yaml_with_quirks = { version = "0.8.24", optional = true }
toml = { version = "0.8.20", optional = true}
walkdir = "2.5.0"

[features]
default = []
serialize = ["dep:serde", "dep:serde_json", "dep:serde_yaml_with_quirks", "dep:toml"]