[package]
name = "vfstool_lib"
version = "0.2.0"
edition = "2024"
description = "A library for constructing and manipulating virtual file systems in Rust, based on OpenMW's VFS implementation."
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/DreamWeave-MP/vfstool"
repository = "https://github.com/DreamWeave-MP/vfstool"
keywords = ["vfs", "openmw", "gamedev", "modding", "bethesda"]

[dependencies]
ba2 = { version = "3.0.1", optional = true }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_yaml_with_quirks = { version = "0.9.34", optional = true }
toml = { version = "0.9.2", optional = true }
walkdir = "2.5.0"

[features]
default = []
bsa = ["dep:ba2"]
serialize = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml_with_quirks",
    "dep:toml",
]
